quorum/test/tests/TypeChecker/Pass/TextSetAndGetValue.quorum
class Main
    action Main
        Text t
        t:SetValue("5")
        print t
    end
end