quorum/test/tests/TypeChecker/Fail/ImpAssignTextObjIntObj.quorum
Integer int
int:setValue(5)
Text t = int